[package]
name = "escrow-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "escrow_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"] # dealing with spl tokens

[dependencies] 
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] } # to create ata if not already exists
anchor-spl = "0.30.1"
proc-macro2 = "=1.0.94"